SPEC-002-16: Fix linter and type checker errors
- Exclude malformed.py test fixture from ruff checks
- Fix comment line length in test_deduplication.py
- Add noqa comment for mcp_client import order
- Add count_experiences method to ExperienceClusterer
- Fix ClusterInfo access (use attributes instead of dict methods)
- Fix ValidationResult attribute names (valid/similarity)
- Fix created_at field (already a string, no isoformat needed)
- Fix Lesson what_worked type handling with type: ignore comment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ learning-memory-server = "learning_memory_server.server.main:main"
 [tool.ruff]
 line-length = 88
 target-version = "py312"
+exclude = ["tests/fixtures/code_samples/malformed.py"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
