--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,17 @@ exclude = ["tests/fixtures/code_samples/malformed.py"]
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
 
+[tool.ruff.lint.per-file-ignores]
+# JSON schema definitions have long string literals that can't be easily wrapped
+"src/learning_memory_server/server/tools/__init__.py" = ["E501"]
+# Docstrings with long parameter descriptions
+"src/learning_memory_server/search/searcher.py" = ["E501"]
+# Test files with module-level imports after sys.path manipulation
+"tests/integration/test_e2e.py" = ["E402"]
+"tests/test_bug_006_experience_schema.py" = ["E402"]
+# Test files with long assertions and test data - hard to wrap meaningfully
+"tests/**/*.py" = ["E501"]
+
 [tool.mypy]
 python_version = "3.12"
 strict = true
