--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,8 @@ select = ["E", "F", "I", "N", "W", "UP"]
 "tests/test_bug_006_experience_schema.py" = ["E402"]
 # Test files with long assertions and test data - hard to wrap meaningfully
 "tests/**/*.py" = ["E501"]
+# Generated test data scripts
+"generate_*.py" = ["E501"]
 
 [tool.mypy]
 python_version = "3.12"
