Fix: Add -rs to pytest addopts for platform skip detection
The gate check script looks for Platform: prefix in skip reasons to
allow platform-specific skips. The -rs flag ensures pytest outputs the
short test summary with skip reasons visible.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ ignore_missing_imports = true
 asyncio_mode = "auto"
 testpaths = ["tests"]
 timeout = 60
-addopts = "-m 'not slow'"
+addopts = "-m 'not slow' -rs"
 markers = [
     "slow: marks tests as slow (>15s, excluded by default)",
     "integration: marks tests as integration tests requiring external services",
