--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ dev = [
 [project.scripts]
 clams-server = "clams.server.main:main"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/clams"]
+
 [tool.ruff]
 line-length = 88
 target-version = "py312"
