Fix container/volume name mismatch between installer and uninstaller (BUG-068)
Standardize all Docker container/volume references to use:
- Container name: calm-qdrant
- Volume name: calm_qdrant_data

Previously docker.py used "qdrant"/"qdrant_data", uninstall.sh used
"calm-qdrant"/"calm_qdrant_storage", and docker-compose.yml used
"calm-qdrant"/"qdrant_storage". This mismatch meant the uninstaller
could not find or clean up containers/volumes created by the installer.

Add module-level CONTAINER_NAME and VOLUME_NAME constants to docker.py
and regression tests verifying all functions use the correct names.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "6333:6333"
       - "6334:6334"
     volumes:
-      - qdrant_storage:/qdrant/storage
+      - calm_qdrant_data:/qdrant/storage
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:6333/healthz"]
@@ -17,5 +17,5 @@ services:
       - QDRANT_LOG_LEVEL=INFO
 
 volumes:
-  qdrant_storage:
+  calm_qdrant_data:
     driver: local
